--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <li><a href="#">Sklep</a></li>
         
         <!-- odniesienie do sekcji, wejscie poprzez link sekcji  -->
-        <li><a href="#page2">Formularz zgłoszeniowy</a></li>
+        <li><a href="#page2">Formularz kontaktowy</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Konto Premium</a></li>
